# elfgpg

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.rst  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in
CMake/Modules/: Define_CMakeDefaults.cmake  Define_CompilerFlags.cmake  Define_PlatformDefaults.cmake  Macro_EnsureOutOfSourceBuild.cmake
config/: mkinstalldirs
debian/: README.Debian  changelog  control  copyright  elfpgp.1  elfpgp.manpages  elfpgp.sgml  elfpgp.substvars  files  rules  watch
lib/: ep_session.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  debug.h  dump.c  dump.h  elfgpg.h  elfhelp.h  elfpgp.h  elfstrings.c  elfstrings.h  main.c  options.h  sign.c  sign.h  verify.c  verify.h
